--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html, body {
     height: 100%;
     width: 100%;
     font-family: "Arial Black", sans-serif;
-    color: #222;
+    color: yellowgreen;
 }
 
 
@@ -27,7 +27,7 @@ html, body {
 }
 
 .welcome hr {
-    border-top: 2px solid #b4b4b4;
+    border-top: 2px solid yellowgreen;
     width: 95%;
     margin-top: .3rem;
     margin-bottom: 1rem;
@@ -58,7 +58,7 @@ html, body {
     transform: scale(1.1);
 }
 footer {
-    background-color: navy;
+    background-color: yellowgreen;
     padding-top: 2rem;
 }
 hr.light {
